Closed
Bug 1732921
Opened 3 years ago
Closed 3 years ago
visibility:hidden + z-index makes button invisible
Categories
(Core :: Web Painting, defect, P3)
Tracking
()
RESOLVED
FIXED
96 Branch
Tracking | Status | |
---|---|---|
firefox96 | --- | fixed |
People
(Reporter: youCanCallMeDen, Assigned: mikokm)
References
()
Details
(Keywords: testcase)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.61 Safari/537.36
Steps to reproduce:
<button class="parent">
<span class="child">content</span>
</button>
.parent {
visibility: hidden;
position: relative;
z-index: 1;
}
.child {
visibility: visible;
}
demo: http://jsfiddle.net/m3yjw6o9/1/
Actual results:
.child remains invisible
Expected results:
.child should be visible
Updated•3 years ago
|
Has STR: --- → yes
Component: Untriaged → CSS Parsing and Computation
Keywords: testcase
Product: Firefox → Core
Updated•3 years ago
|
Component: CSS Parsing and Computation → Web Painting
Comment 1•3 years ago
|
||
The severity field is not set for this bug.
:mattwoodrow, could you have a look please?
For more information, please visit auto_nag documentation.
Flags: needinfo?(matt.woodrow)
Assignee | ||
Updated•3 years ago
|
Severity: -- → S2
Priority: -- → P3
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → mikokm
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(matt.woodrow)
Assignee | ||
Comment 2•3 years ago
|
||
Assignee | ||
Comment 3•3 years ago
|
||
Depends on D129966
Updated•3 years ago
|
Attachment #9248508 -
Attachment description: Bug 1732921 - Part 1: Do not consider button to be replaced element. r=emilio → Bug 1732921 - Part 1: Do not skip display list building when a replaced element is stacking context. r=emilio
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/0d4c16035e18
Part 1: Do not skip display list building when a replaced element is stacking context. r=emilio
https://hg.mozilla.org/integration/autoland/rev/4dc03a8a15db
Part 2: Add test. r=emilio
Comment 5•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/0d4c16035e18
https://hg.mozilla.org/mozilla-central/rev/4dc03a8a15db
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox96:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Updated•3 years ago
|
Flags: qe-verify+
Updated•3 years ago
|
Flags: qe-verify+
Updated•3 years ago
|
QA Whiteboard: [qa-96b-p2]
You need to log in
before you can comment on or make changes to this bug.
Description
•