Bug 1732921 - Part 1: Do not skip display list building when a replaced element is stacking context. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D129966